# RP_01

./: Отчёт.docx
1/: TASK_1_PANKOV.txt  main.py
2/: main.py
3/: bad solution 2.7z  bad_solution.7z
3/build-integrals-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
3/integrals/: CMakeLists.txt  auth.qml  auth.qml.autosave  loadermanager.cpp  main.cpp  main.qml  resources.qrc  splashscreen.cpp  splashscreen.h
3_C++/build-integrals-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appintegrals_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
3_C++/build-integrals-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
3_C++/integrals/: CMakeLists.txt  loadermanager.cpp  loadermanager.h  main.cpp  resources.qrc
3_Python/: GeneratorManager.py  LoaderManager.py  ProfileManager.py  TopicModel.qml  auth.qml  error.qml  generator.qml  main.py  main.qml  profile.qml  resources.qrc  resources_.py  splash.qml  tests.qml  themes.qml  topic.qml  topics.qml  utils.py  webpage.qml
3_Python/models/: NavigationModel.qml  TestsModel.qml  TopicModel.qml  generator.html  test.html
3_Python/offline/: html-template.html  style.css  telegram_auth.html  tests.json  topics.json  Введение.md
3_server/: app.py
3_server/static/: style.css
3_server/templates/: generator.html  telegram_auth.html  test.html  test_result.html  topic.html
3_server/tests/: check_auth.http  (+2 more)
(+171 files in other folders)
